--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "setup": "npm --prefix server install && npm --prefix client/frontend install",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "npm run server && npm run client",
     "server": "cd server && npm run dev",
     "client": "cd client/frontend && npm run dev"
   },
