--- a/server/src/package.json
+++ b/server/src/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bun": "latest",
     "nodemon": "^3.1.9"
   },
@@ -13,6 +14,9 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.3",
+    "@types/express": "^5.0.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
