--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "setup": "npm --prefix server install && npm --prefix client/frontend install",
     "start": "concurrently \"cd client/frontend && bun run dev\" \"cd server && bun run dev\"",
-    "build": "npm --prefix client/frontend run build",
+    "build": "npm --prefix client/frontend run build && bun run build:css",
     "server": "cd server && bun run dev",
     "client": "cd client/frontend && bun run dev",
     "install": "npm --prefix server install && npm --prefix client/frontend install"
