--- a/client/frontend/package.json
+++ b/client/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --open",
-    "build": "tsc -b && vite build && npm run build:css",
+    "build": "tsc -b && vite build",
     "build:css": "tailwindcss -i ./src/index.css -o ./dist/tailwind.css",
     "lint": "eslint .",
     "preview": "vite preview"
