--- a/client/frontend/package.json
+++ b/client/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --open",
     "build": "tsc -b && vite build",
-    "build:css": "tailwindcss -i ./src/index.css -o ./dist/tailwind.css",
+    "build:css": "tailwindcss -i ./src/index.css -o ./src/tailwind.css",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -15,11 +15,8 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.7.0",
-    "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.3",
     "graphql": "^16.10.0",
-    "jsnes": "^1.2.1",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -27,7 +24,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@tailwindcss/postcss": "^4.0.14",
     "@types/mongoose": "^5.11.96",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
