--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bun": "latest",
+    "@types/multer": "^1.4.12",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
   },
@@ -26,6 +27,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.2",
     "stripe": "^17.7.0"
   }
 }
