--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,7 @@
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
-    "multer": "^1.4.5-lts.2",
+    "multer": "^1.4.2",
     "multer-gridfs-storage": "^5.0.2",
     "stripe": "^17.7.0"
   }
